package mei.designpattern.proxy.Searcher;

public class Logger {
    public void log(String uid) {
        System.out.println("Start logging for user " + uid);
    }
}
