package mei.designpattern.proxy.Searcher;

public interface Searcher {
    public String doSearch(String uid, String keyWord);
}
